# atomic-rag

./: .gitignore  AGENTS.md  CLAUDE.md  CURSOR.md  LINE_COUNT_REPORT.md  README.md  pyproject.toml
.claude/: README.md
change_log/: D04_atomic_finding.md  P0_reproducibility_floor.md  P0_reproducibility_receipt.md  P1_atomic_instrumentation.md  P2_strong_baselines_and_asimov.md  P3_5_through_P6_inference_sketches.md  P3_anti_kt_evidence_jet.md  P3_cs_sweep_atomic_diagnosis.md  P3_cs_sweep_iter1_cs64_finding.md  P3_empirical_iteration_1.md  P3_empirical_iteration_2.md  P3_negative_finding_jet_select_v1.md  P3_regression_synthetic_unreproducible.md  P3_v3_atomic_unit_greedy.md  P3_why_v3_works_and_fails.md  P4_lockin_negative_finding.md  README.md  atomic_corrections.md  atomic_decomp_v3_physics_mapped.md  atomic_decomp_v4_per_query.md  atomic_decomposition.md  atomic_failure_atlas.md  bottleneck_decomposition.md  citation_hallucination_finding.md  clean_rag_negative_finding.md  cost_equivalence_frontier.md  cross_config_bucket_comparison.md  honest_naming_and_adaptation_audit.md  hybrid_retrieval_finding.md  nomenclature_final.md  nomenclature_quark_hadron.md  nq_open_v4_specialization.md  paper_outline_v1.md  paper_structure_v2.md  perf_audit_2026_05_03.md  publication_strategy.md  results_consolidated.md  root_cause_analysis_2026_05_04.md  significance_corrected.md  v4_alpha_curve.md  (+1 more)
configs/: ablation.yaml  benchmark.yaml  detect.yaml  error_analysis.yaml  eval.yaml  index.yaml  retrieve.yaml  sanity.yaml  select.yaml
docs/: 00_manifest.md  01_project_goal.md  (+25 more)
(+1423 files in other folders)
